# trade-guider-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  fly.toml  manage.py  pyproject.toml
business/: models.py  serializers.py  urls.py  views.py
business/migrations/: 0001_initial.py  0003_alter_company_website.py  0004_alter_company_id.py  0005_alter_company_id.py
common/: authentication.py  exceptions.py
companyXbackend/: manage.py
companyXbackend/business/: models.py  serializers.py  urls.py  views.py
companyXbackend/business/migrations/: 0001_initial.py  0002_rename_industry_company_category_company_is_claimed_and_more.py
companyXbackend/common/: authentication.py  exceptions.py  helpers.py  responses.py
companyXbackend/companyXbackend/: asgi.py  settings.py  urls.py  wsgi.py
companyXbackend/companyXbackend/settings/: dev.py  prod.py
companyXbackend/users/: models.py  serializers.py  urls.py  views.py
companyXbackend/users/migrations/: 0001_initial.py  0002_rename_created_reviewflags_created_at_and_more.py
companyXbackend/users/tests/: test_claude_views.py  test_models.py  test_serializers.py  test_views.py
company_x_backend/: asgi.py  urls.py  wsgi.py
company_x_backend/settings/: dev.py  prod.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_created_reviewflags_created_at_and_more.py  0003_remove_review_date_of_experience.py  0004_alter_reviewflags_unique_together_and_more.py  0005_alter_review_id_alter_user_id.py  0006_alter_review_id_alter_user_id.py
users/tests/: jwjwjwj.py  test_models.py  test_serializers.py  test_views.py
